css/style.css
/* ... */
.line-clamp-10 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 10;
}

.current {
  color: #290f00;
}

body {
  background: url('../img/bg.png') center / cover;
}

nav {
  background: url('../img/nav-bg.png') no-repeat center / cover;
}

#menu-card {
  background: url('https://res.cloudinary.com/wasituf/image/upload/c_scale,w_1080/v1658650704/hummingbird-coffee-house/menu-bg_qkafiq.jpg')
    no-repeat center / cover;
  position: relative;
  z-index: -20;
}

#menu-card::before {
  content: '';
  position: absolute;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  z-index: -10;
  background-color: rgb(21 9 0 / 0.7);
}

#contact {
  background: url('https://res.cloudinary.com/wasituf/image/upload/c_scale,h_522,q_auto/v1658650706/hummingbird-coffee-house/contact-bg_dgtthb.jpg')
    no-repeat center / cover;
  position: relative;
  z-index: 20;
}

#contact::before {
  content: '';
  position: absolute;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  z-index: -10;
  background-color: rgb(41 15 0 / 0.5);
}

section {
  scroll-margin-top: 100px;
}

@media (max-width: 640px) {
  #about {
    scroll-margin-top: 200px;
  }

  #visit-us {
    scroll-margin-top: 200px;
  }

  #menu {
    scroll-margin-top: 200px;
  }
}

.placeholder\:italic::-moz-placeholder {
  font-style: italic;
}

.placeholder\:italic:-ms-input-placeholder {
  font-style: italic;
}

.placeholder\:italic::placeholder {
  font-style: italic;
}

.hover\:scale-105:hover {
  --tw-scale-x: 1.05;
  --tw-scale-y: 1.05;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.focus\:outline-none:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

@media (min-width: 768px) {
  .md\:absolute {
    position: absolute;
  }

  .md\:-top-10 {
    top: -2.5rem;
  }

  .md\:right-0 {
    right: 0px;
  }

  .md\:right-16 {
    right: 4rem;
  }

  .md\:top-52 {
    top: 13rem;
  }

  .md\:top-36 {
    top: 9rem;
  }

  .md\:left-7 {
    left: 1.75rem;
  }

  .md\:m-auto {
    margin: auto;
  }

  .md\:mb-16 {
    margin-bottom: 4rem;
  }

  .md\:mr-6 {
    margin-right: 1.5rem;
  }

  .md\:mb-48 {
    margin-bottom: 12rem;
  }

  .md\:ml-52 {
    margin-left: 13rem;
  }

  .md\:inline-block {
    display: inline-block;
  }

  .md\:flex {
    display: flex;
  }

  .md\:h-88 {
    height: 22rem;
  }

  .md\:max-h-md {
    max-height: 454px;
  }

  .md\:max-w-xs {
    max-width: 20rem;
  }

  .md\:translate-x-0 {
    --tw-translate-x: 0px;
    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  }

  .md\:flex-row {
    flex-direction: row;
  }

  .md\:items-center {
    align-items: center;
  }

  .md\:justify-end {
    justify-content: flex-end;
  }

  .md\:justify-between {
    justify-content: space-between;
  }

  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(0px * var(--tw-space-y-reverse));
  }

  .md\:space-x-1 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-x-reverse: 0;
    margin-right: calc(0.25rem * var(--tw-space-x-reverse));
    margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
  }

  .md\:px-8 {
    padding-left: 2rem;
    padding-right: 2rem;
  }

  .md\:px-6 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }

  .md\:pb-4 {
    padding-bottom: 1rem;
  }

  .md\:pt-40 {
    padding-top: 10rem;
  }

  .md\:pb-0 {
    padding-bottom: 0px;
  }

  .md\:pb-64 {
    padding-bottom: 16rem;
  }

  .md\:text-left {
    text-align: left;
  }

  .md\:text-start {
    text-align: start;
  }

  .md\:text-3xl {
    font-size: 1.875rem;
    line-height: 2.25rem;
  }

  .md\:text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
  }

  .md\:text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }

  .md\:leading-tight {
    line-height: 1.25;
  }

  .md\:line-clamp-8 {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 8;
  }
}

@media (min-width: 1080px) {
  .lg\:top-80 {
    top: 20rem;
  }

  .lg\:right-24 {
    right: 6rem;
  }

  .lg\:top-52 {
    top: 13rem;
  }

  .lg\:h-96 {
    height: 24rem;
  }

  .lg\:max-h-lg {
    max-height: 585px;
  }

  .lg\:max-w-md {
    max-width: 28rem;
  }

  .lg\:flex-row {
    flex-direction: row;
  }

  .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(0px * var(--tw-space-y-reverse));
  }

  .lg\:space-x-20 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-x-reverse: 0;
    margin-right: calc(5rem * var(--tw-space-x-reverse));
    margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
  }

  .lg\:pt-60 {
    padding-top: 15rem;
  }

  .lg\:pb-96 {
    padding-bottom: 24rem;
  }

  .lg\:text-7xl {
    font-size: 4.5rem;
    line-height: 1;
  }

  .lg\:text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
  }

  .lg\:text-5xl {
    font-size: 3rem;
    line-height: 1;
  }

  .lg\:text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }

  .lg\:line-clamp-10 {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 10;
  }
}

